--- a/index.html
+++ b/index.html
@@ -1,335 +1,202 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="manifest" href="manifest.json">
-    <link rel="apple-touch-icon" href="icon.png">
-    <meta name="theme-color" content="#ff6600">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>High Limit Dash Starting Order</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@600&display=swap');
-
         body {
-            font-family: 'Oswald', sans-serif;
-            text-align: center;
-            margin: 10px;
-            background-color: #1a1a1a;
-            color: white;
-            font-size: 16px;
+            font-family: 'Arial', sans-serif;
+            margin: 20px;
+            background-color: #111;
+            color: #fff;
         }
-
+        h1 {
+            text-align: center;
+            color: #ffcc00;
+        }
+        .driver-input {
+            margin-bottom: 15px;
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+        }
+        .driver-input label {
+            flex: 1 0 100%;
+            font-weight: bold;
+            margin-bottom: 4px;
+        }
+        .driver-input input {
+            flex: 1 0 calc(33.33% - 10px);
+            padding: 8px;
+            font-size: 16px;
+            border: none;
+            border-radius: 5px;
+        }
+        .driver-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+        }
+        .driver-box {
+            flex: 1 0 48%;
+            background-color: #222;
+            padding: 10px;
+            margin: 10px 0;
+            border-radius: 8px;
+        }
         table {
             width: 100%;
-            margin: 5px auto;
             border-collapse: collapse;
-            background-color: #000;
-            color: white;
-            border: 2px solid #FFC107;
-            font-size: 3.5vw;
+            margin-top: 25px;
         }
-
         th, td {
-            border: 2px solid #FFC107;
-            padding: 8px;
-            text-align: center;
-            background-color: #000;
-            color: white;
-        }
-
-        th:nth-child(1), td:nth-child(1) {
-            width: 50%;
-            max-height: 7vw;
-            overflow: hidden;
-            word-wrap: break-word;
-            white-space: pre-wrap;
-            overflow-wrap: break-word;
-        }
-
-        th:nth-child(2), td:nth-child(2) { width: 25%; }
-        th:nth-child(3), td:nth-child(3) { width: 25%; }
-
-        th:nth-child(1), td:nth-child(1) input {
-            width: 100%;
-            box-sizing: border-box;
-            margin: 0 auto;
-            display: block;
-            word-wrap: break-word;
-            white-space: pre-wrap;
-            overflow-wrap: break-word;
-            max-height: 7vw;
-            overflow: hidden;
-        }
-
-        input, textarea {
-            width: 90%;
-            padding: 8px;
-            font-size: 3.5vw;
-            text-align: center;
-            background-color: #000;
-            color: white;
-            border: 1px solid #FFC107;
-            box-sizing: border-box;
-            margin: 0 auto;
-            display: block;
-        }
-
-        .highlight {
-            background-color: #FFC107;
-            color: black;
-            font-weight: bold;
-        }
-
-        .header-container {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            margin-bottom: 10px;
-        }
-
-        .header {
-            font-size: 6vw;
-            font-weight: bold;
-            color: #FFC107;
-            text-transform: uppercase;
-            margin: 5px 10px;
-            letter-spacing: 1px;
-            flex-grow: 1;
-            text-align: center;
-        }
-
-        .logo {
-            width: 40px;
-            height: 40px;
-            margin-left: 10px;
-        }
-
-        #startingOrder th, #startingOrder td {
-            border: 1px solid black;
-        }
-
-        #startingOrder th:nth-child(1), #startingOrder td:nth-child(1) { max-width: 200px; }
-        #startingOrder th:nth-child(2), #startingOrder td:nth-child(2),
-        #startingOrder th:nth-child(3), #startingOrder td:nth-child(3) { width: 100%; }
-
-        #startingOrder tr td {
-            background-color: #1E88E5;
-            color: white;
-            font-size: 3.5vw;
-        }
-
-        #startingOrder tr td:first-child {
-            background-color: #FFC107;
-            color: black;
-            font-weight: bold;
-        }
-
-        #startingOrder th {
-            background-color: #1E88E5;
-            color: #FFC107;
-        }
-
-        .table-container {
-            position: relative;
-            padding: 2px;
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .fan-question {
-            margin: 20px auto;
             padding: 10px;
-            border: 2px solid #FFC107;
-            background-color: #000;
-            width: 90%;
-            display: block;
             text-align: center;
         }
-
-        .fan-question textarea {
-            height: 10vw;
-            margin: 10px auto;
+        th {
+            background-color: #444;
         }
-
-        .fan-info {
-            display: flex;
-            flex-direction: row;
-            gap: 10px;
-            margin-top: 10px;
-            align-items: center;
-            justify-content: center;
-            flex-wrap: wrap;
+        td {
+            background-color: #222;
         }
-
-        .fan-label {
-            font-size: 3.5vw;
-            color: #FFC107;
-            text-transform: uppercase;
-            margin-bottom: 0;
-            min-width: 100px;
-            text-align: right;
-            padding-right: 5px;
+        .question-box {
+            margin-top: 30px;
         }
-
-        .fan-input-wrapper {
-            flex: 1;
-            min-width: 200px;
+        .question-box label {
+            font-weight: bold;
         }
-
-        .fan-input-wrapper input {
-            height: 7vw;
-        }
-
-        button {
-            padding: 10px 20px;
-            font-size: 3.5vw;
-            font-family: 'Oswald', sans-serif;
-            background-color: #FFC107;
-            color: black;
+        .question-box input {
+            width: 100%;
+            padding: 10px;
+            margin-top: 8px;
+            font-size: 16px;
+            border-radius: 5px;
             border: none;
-            cursor: pointer;
-            text-transform: uppercase;
-            letter-spacing: 1px;
-            margin: 20px auto;
-            display: block;
         }
-
-        button:hover {
-            background-color: #ffdb58;
-        }
-
-        @media (max-width: 480px) {
-            table { font-size: 4vw; }
-            input, textarea { font-size: 4vw; padding: 6px; }
-            .header { font-size: 7vw; }
-            button { font-size: 4vw; padding: 8px 16px; }
-            .logo { width: 30px; height: 30px; }
-            .fan-question textarea { height: 12vw; }
+        @media screen and (max-width: 768px) {
+            .driver-box {
+                flex: 1 0 100%;
+            }
+            .driver-input input {
+                flex: 1 0 100%;
+            }
         }
     </style>
 </head>
-<body onload="populateDriverTable(); loadFormData()">
-    <div class="header-container">
-        <img src="logo.png" alt="Logo" class="logo">
-        <div class="header">REDRAW WHEEL ORDER</div>
-    </div>
+<body>
+    <h1>High Limit Dash Starting Order</h1>
 
-    <div class="fan-question">
-        <div class="header">Fan Question of the Night</div>
-        <textarea id="fanQuestion" placeholder="Enter the fan's question here..." oninput="saveFormData()"></textarea>
-        <div class="fan-info">
-            <div class="fan-label">Fan Name</div>
-            <div class="fan-input-wrapper"><input type="text" id="fanName" placeholder="Fan's Name" oninput="saveFormData()"></div>
-            <div class="fan-label">Fan Hometown</div>
-            <div class="fan-input-wrapper"><input type="text" id="fanHometown" placeholder="Fan's Hometown" oninput="saveFormData()"></div>
+    <div class="driver-container">
+        <!-- Driver Inputs -->
+        <div class="driver-box">
+            <div class="driver-input">
+                <label for="driver1">Driver 1</label>
+                <input type="text" id="driver1" placeholder="Name">
+                <input type="text" id="qualify1" placeholder="Qualifying Time">
+                <input type="text" id="spin1" placeholder="Spin (00,0-9)" oninput="updateGrid()">
+            </div>
+            <div class="driver-input">
+                <label for="driver2">Driver 2</label>
+                <input type="text" id="driver2" placeholder="Name">
+                <input type="text" id="qualify2" placeholder="Qualifying Time">
+                <input type="text" id="spin2" placeholder="Spin (00,0-9)" oninput="updateGrid()">
+            </div>
+            <div class="driver-input">
+                <label for="driver3">Driver 3</label>
+                <input type="text" id="driver3" placeholder="Name">
+                <input type="text" id="qualify3" placeholder="Qualifying Time">
+                <input type="text" id="spin3" placeholder="Spin (00,0-9)" oninput="updateGrid()">
+            </div>
+            <div class="driver-input">
+                <label for="driver4">Driver 4</label>
+                <input type="text" id="driver4" placeholder="Name">
+                <input type="text" id="qualify4" placeholder="Qualifying Time">
+                <input type="text" id="spin4" placeholder="Spin (00,0-9)" oninput="updateGrid()">
+            </div>
+        </div>
+
+        <div class="driver-box">
+            <div class="driver-input">
+                <label for="driver5">Driver 5</label>
+                <input type="text" id="driver5" placeholder="Name">
+                <input type="text" id="qualify5" placeholder="Qualifying Time">
+                <input type="text" id="spin5" placeholder="Spin (00,0-9)" oninput="updateGrid()">
+            </div>
+            <div class="driver-input">
+                <label for="driver6">Driver 6</label>
+                <input type="text" id="driver6" placeholder="Name">
+                <input type="text" id="qualify6" placeholder="Qualifying Time">
+                <input type="text" id="spin6" placeholder="Spin (00,0-9)" oninput="updateGrid()">
+            </div>
+            <div class="driver-input">
+                <label for="driver7">Driver 7</label>
+                <input type="text" id="driver7" placeholder="Name">
+                <input type="text" id="qualify7" placeholder="Qualifying Time">
+                <input type="text" id="spin7" placeholder="Spin (00,0-9)" oninput="updateGrid()">
+            </div>
+            <div class="driver-input">
+                <label for="driver8">Driver 8</label>
+                <input type="text" id="driver8" placeholder="Name">
+                <input type="text" id="qualify8" placeholder="Qualifying Time">
+                <input type="text" id="spin8" placeholder="Spin (00,0-9)" oninput="updateGrid()">
+            </div>
         </div>
     </div>
 
-    <div class="table-container">
-        <table>
-            <thead>
-                <tr>
-                    <th>Driver</th>
-                    <th>Qualifying Time (ss.sss)</th>
-                    <th>Spin #</th>
-                </tr>
-            </thead>
-            <tbody id="drivers"></tbody>
-        </table>
-
-        <table id="startingOrder">
-            <thead>
-                <tr>
-                    <th>Row</th>
-                    <th>Inside Row</th>
-                    <th>Outside Row</th>
-                </tr>
-            </thead>
-            <tbody id="startingOrderBody"></tbody>
-        </table>
+    <div class="question-box">
+        <label for="fanQuestion">Fan Question:</label>
+        <input type="text" id="fanQuestion" placeholder="Type the fan question here">
     </div>
 
-    <button onclick="resetForm()">Reset Form</button>
+    <table id="startingOrder">
+        <thead>
+            <tr>
+                <th>Row</th>
+                <th>Inside</th>
+                <th>Outside</th>
+            </tr>
+        </thead>
+        <tbody id="startingOrderBody">
+            <!-- Filled by JS -->
+        </tbody>
+    </table>
 
     <script>
-        const validSpinValues = ["00", ...Array.from({ length: 37 }, (_, i) => i.toString())];
-
-        function populateDriverTable() {
-            const tbody = document.getElementById('drivers');
-            tbody.innerHTML = '';
-            for (let i = 1; i <= 8; i++) {
-                const row = document.createElement('tr');
-                row.innerHTML = `
-                    <td><input type="text" placeholder="Driver ${i}" id="driver${i}" oninput="saveFormData(); updateGrid()"></td>
-                    <td><input type="text" placeholder="00.000" id="time${i}" oninput="formatTime(this); saveFormData(); updateGrid()"></td>
-                    <td><input type="text" placeholder="00 or 0-36" id="spin${i}" oninput="validateSpin(this); saveFormData(); updateGrid()"></td>
-                `;
-                tbody.appendChild(row);
-            }
-        }
-
-        function validateSpin(input) {
-            let val = input.value.trim();
-            if (val === '') return;
-            if (!validSpinValues.includes(val)) {
-                input.value = '';
-                alert('Spin must be "00" or a number from 0 to 36.');
-            }
-        }
-
-        function resetForm() {
-            localStorage.removeItem('formData');
-            document.getElementById('fanQuestion').value = '';
-            document.getElementById('fanName').value = '';
-            document.getElementById('fanHometown').value = '';
-            populateDriverTable();
-            updateGrid();
-        }
-
-        function saveFormData() {
-            const data = {
-                drivers: [],
-                fanQuestion: document.getElementById('fanQuestion').value,
-                fanName: document.getElementById('fanName').value,
-                fanHometown: document.getElementById('fanHometown').value
-            };
-
-            for (let i = 1; i <= 8; i++) {
-                data.drivers.push({
-                    driver: document.getElementById('driver' + i).value,
-                    time: document.getElementById('time' + i).value,
-                    spin: document.getElementById('spin' + i).value
-                });
-            }
-
-            localStorage.setItem('formData', JSON.stringify(data));
-        }
-
-        function loadFormData() {
-            const data = JSON.parse(localStorage.getItem('formData'));
-            if (!data) return;
-
-            document.getElementById('fanQuestion').value = data.fanQuestion || '';
-            document.getElementById('fanName').value = data.fanName || '';
-            document.getElementById('fanHometown').value = data.fanHometown || '';
-
-            for (let i = 1; i <= 8; i++) {
-                document.getElementById('driver' + i).value = data.drivers[i - 1]?.driver || '';
-                document.getElementById('time' + i).value = data.drivers[i - 1]?.time || '';
-                document.getElementById('spin' + i).value = data.drivers[i - 1]?.spin || '';
-            }
-        }
+        const validSpinValues = ["00", "0", "1", "2", "3", "4", "5", "6", "7", "8", "9"];
 
         function updateGrid() {
-            // You can customize this part for how you want to use the spin numbers
-        }
+            const data = [];
 
-        function formatTime(input) {
-            input.value = input.value.replace(/[^\d.]/g, '').slice(0, 6);
+            for (let i = 1; i <= 8; i++) {
+                const name = document.getElementById('driver' + i).value.trim();
+                const spin = document.getElementById('spin' + i).value.trim();
+
+                if (name && validSpinValues.includes(spin)) {
+                    const spinValue = spin === "00" ? -1 : parseInt(spin); // Treat "00" as best spin
+                    data.push({ name, spin, spinValue });
+                }
+            }
+
+            // Sort drivers by spinValue ascending
+            data.sort((a, b) => a.spinValue - b.spinValue);
+
+            const tbody = document.getElementById('startingOrderBody');
+            tbody.innerHTML = '';
+
+            for (let i = 0; i < data.length; i += 2) {
+                const rowNum = Math.floor(i / 2) + 1;
+                const insideDriver = data[i]?.name || '';
+                const outsideDriver = data[i + 1]?.name || '';
+
+                const tr = document.createElement('tr');
+                tr.innerHTML = `
+                    <td>${rowNum}</td>
+                    <td>${insideDriver}</td>
+                    <td>${outsideDriver}</td>
+                `;
+                tbody.appendChild(tr);
+            }
         }
     </script>
 </body>
